# cs433_ml_project_2

./: .dockerignore  .env.example  .gitignore  CI.md  Dockerfile  GUIDE.md  MANUAL_DEPLOYMENT.md  Makefile  PORTAINER_SETUP.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  renovate.json  requirements.txt  test_pdf_parsing.py
.claude/: settings.local.json
.github/workflows/: build-docker.yml  ci.yml  release.yml
api/: Dockerfile  config.py  main.py  prompts.py
docker/: README.md
docs/: AWS_DEPLOYMENT.md  DEPLOYMENT_UNRAID.md  DEPLOYMENT_VERCEL.md  LITELLM_SETUP.md  REPORT_DRAFT.md  benchmarking_system.md  checkpoint_2025-11-10.md  diagrams.md  markdown_chunking.md  requirements_chunking.txt
docs/plans/: 2025-11-07-vastai-batch-processing-design.md  2025-11-09-distributed-pdf-processing-design.md  2025-11-09-vastai-pdf-processing-design.md  2025-12-01-chunking-embedding-pipeline-design.md  2025-12-03-litellm-openrouter-design.md
frontend/: package-lock.json  package.json
frontend/src/: get-dictionary.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/[lang]/: page.tsx
frontend/src/components/: ChatInterface.tsx  InputComposer.tsx  ModelSelector.tsx  Sidebar.tsx  StructuredResponse.tsx
frontend/src/dictionaries/: en.json  fr.json
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
output/pdf_parsing_test/markdown/: 00347_W3004748802_Small_firms_and_patenting_revisited.md
output/pdf_parsing_test/recognition_json/: 00347_W3004748802_Small_firms_and_patenting_revisited.json
output/test_local_processing/markdown/: 00347_W3004748802_Small_firms_and_patenting_revisited.md
output/test_local_processing/recognition_json/: 00347_W3004748802_Small_firms_and_patenting_revisited.json
rag_pipeline/: __init__.py  __main__.py
rag_pipeline/benchmarking/: __init__.py  visualizations.py
rag_pipeline/openalex/: config.py  downloader.py  fetcher.py  test.py  utils.py
rag_pipeline/pdf_parsing/: config.py
rag_pipeline/pdf_parsing/factories/: __init__.py
rag_pipeline/pdf_parsing/processors/: image_extractor.py  layout_parser.py  markdown_converter.py
rag_pipeline/pdf_parsing/utils/: __init__.py  image_utils.py
rag_pipeline/rag/: chunking.py  openai_embedder.py  retriever.py
reports/: chunking_evaluation_20251115_194557.html  chunking_evaluation_20251115_194557.json  chunking_evaluation_20251115_195013.html  chunking_evaluation_20251115_195013.json  chunking_evaluation_20251115_195422.html  chunking_evaluation_20251115_195422.json  chunking_evaluation_20251115_195650.html  chunking_evaluation_20251115_195650.json
scripts/: .env.example  README.md  __init__.py  batch_chunk_markdown.py  chunk_all_documents.py  distributed_worker.py  launch_distributed_workers.py  monitor_progress.py  process_pdfs_batch.py  setup_aws_infrastructure.py  test_local_processing.py  test_markdown_chunking.py  test_retriever.py
scripts/benchmarking/: generate_chunking_report.py  regenerate_plots.py
scripts/ci/: build_pex.sh
scripts/dev/: test_local_processing.py  test_markdown_chunking.py  test_retriever.py
scripts/utils/: __init__.py  markdown_s3_loader.py  s3_utils.py  worker_distribution.py
tests/distributed/: test_s3_utils.py  test_worker_distribution.py
