[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG pipeline for academic papers with OpenAlex and Dolphin"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Elie Bruno" }
]

dependencies = [
    # Core utilities (used everywhere)
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "requests>=2.31.0",
    "tenacity>=9.1.2",
    # Cloud storage (used by API and workers)
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    # OpenAI & LLM (used by API)
    "openai>=1.3.5",
    "tiktoken>=0.5.1",
    "litellm>=1.80.7",
    # Vector database (used by API)
    "faiss-cpu>=1.7.4",
    "weaviate-client>=3.25.3",
]

[project.optional-dependencies]
# API server dependencies
api = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

# PDF processing worker dependencies (GPU-heavy)
worker = [
    # PDF processing
    "pypdf>=3.17.0",
    "pdf2image>=1.16.3",
    "pdfplumber>=0.10.3",
    "pillow>=10.1.0",
    "pymupdf>=1.26.6",
    "opencv-python>=4.12.0.88",
    # ML & Transformers (for Dolphin model)
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.1",
    "safetensors>=0.4.0",
    "sentence-transformers>=2.2.2",
    # Data processing
    "pandas>=2.1.3",
    "pyarrow>=14.0.1",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.1",
]

# Analysis and visualization dependencies
analysis = [
    "pandas>=2.1.3",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "plotly>=6.4.0",
    "kaleido>=1.2.0",
    "jinja2>=3.1.6",
    "nbformat>=5.10.4",
]

# CLI and scripting utilities
cli = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "bs4>=0.0.2",
    "ruff>=0.14.4",
    "nltk>=3.8.1",
    "markdown>=3.5.1",
]

# Development dependencies
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.1",
]

# GPU-specific dependencies (for Linux workers)
gpu = [
    "bitsandbytes>=0.41.3; sys_platform == 'linux'",
]

# Legacy/deprecated
pinecone = [
    "pinecone-client>=2.2.4",
]

[project.scripts]
rag-pipeline = "rag_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.22.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
