[project]
name = "rag-pipeline-monorepo"
version = "1.0.1"
description = "RAG pipeline for academic papers - Monorepo workspace"
readme = "README.md"
requires-python = ">=3.14.2"
authors = [
    { name = "Elie Bruno" },
    { name = "Andrea Trugenberger" },
    { name = "Youssef Chelaifa" }
]

# Minimal root dependencies
dependencies = []

[tool.uv.workspace]
members = [
    "packages/shared",
    "packages/api",
    "packages/worker",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "mypy>=1.19.1",
    "ipython>=8.38.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.31.0",
    "ty>=0.0.12",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["packages/*/tests", "tests"]
python_files = "test_*.py"
python_functions = "test_*"
